change to braddy name

--- a/view/index.html
+++ b/view/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Brady Hotels & Apartments</title>
+    <title>Braddy Hotels & Apartments</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="" />
     <meta name="keywords" content="" />
@@ -68,7 +68,7 @@
                     <div class="row">
                         <div class="col-xs-6">
                             <p class="site" style="color: white">
-                                Địa chỉ:&nbspSố&nbspI-21,&nbspđường&nbspBầu&nbspSen&nbsp2,&nbspphường&nbsp2,&nbspVũng&nbspTàu
+                                I-21, đường Bầu Sen&nbsp2, phường&nbsp2,&nbspVũng&nbspTàu
                             </p>
                         </div>
                         <div class="col-xs-6 text-right">
@@ -104,7 +104,7 @@
                     <div class="row">
                         <div class="col-xs-3">
                             <div id="colorlib">
-                                <a href="index.html" style="color: white; font-size: 20px">Brady&nbspHotel&nbsp&&nbspApartment</a>
+                                <a href="index.html" style="color: white; font-size: 20px">Braddy&nbspHotel&nbsp&&nbspApartment</a>
                             </div>
                         </div>
                         <div class="col-xs-9 text-right menu-1">
@@ -113,13 +113,13 @@
                                     <a href="index.html">Home</a>
                                 </li>
                                 <li class="has-dropdown">
-                                    <a href="rooms.html">Rooms</a>
+                                    <a href="#">Rooms</a>
                                     <ul class="dropdown">
                                         <li>
-                                            <a href="#">Hotels</a>
+                                            <a href="rooms.html">Hotels</a>
                                         </li>
                                         <li>
-                                            <a href="#">Apartments</a>
+                                            <a href="rooms.html">Apartments</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -147,31 +147,11 @@
                             <div class="row">
                                 <div class="col-md-6 col-sm-12 col-md-offset-3 slider-text">
                                     <div class="slider-text-inner text-center">
-                                        <h2>Welcome to Brady Hotel & Apartment</h2>
-                                        <h1>A beautiful home to stay</h1>
+                                        <h2>Welcome to Braddy <br>Hotels & Apartments</h2>
+                                        <h1>A beautiful home <br>to stay</h1>
                                         <p>
-                                            <a class="btn btn-primary btn-demo" style="border-radius: 39px" href="rooms.html">
-                                                </i> View rooms</a>
+                                            <a class="btn btn-primary btn-demo" style="border-radius: 39px" href="rooms.html">View rooms</a>
                                             <a class="btn btn-primary btn-learn" style="border-radius: 39px">Contact Us</a>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li style="background-image: url(images/img_bg_1.jpg);">
-                        <div class="overlay"></div>
-                        <div class="container-fluid">
-                            <div class="row">
-                                <div class="col-md-6 col-sm-12 col-md-offset-3 slider-text">
-                                    <div class="slider-text-inner text-center">
-                                        <h2>Discover &amp; Enjoy</h2>
-                                        <h1>Everything you need in
-                                            <br>Brady Hotel & Apartment</h1>
-                                        <p>
-                                            <a class="btn btn-primary btn-learn" style="border-radius: 39px" href="rooms.html">
-                                                </i> View rooms</a>
-                                            <a class="btn btn-primary btn-demo" style="border-radius: 39px">Contact Us</a>
                                         </p>
                                     </div>
                                 </div>
@@ -185,10 +165,9 @@
                                 <div class="col-md-6 col-sm-12 col-md-offset-3 slider-text">
                                     <div class="slider-text-inner text-center">
                                         <h2>You are invited</h2>
-                                        <h1>We know how to please you</h1>
+                                        <h1>We know <br>how to please you</h1>
                                         <p>
-                                            <a class="btn btn-primary btn-demo" style="border-radius: 39px" href="rooms.html">
-                                                </i> View rooms</a>
+                                            <a class="btn btn-primary btn-demo" style="border-radius: 39px" href="rooms.html">View rooms</a>
                                             <a class="btn btn-primary btn-learn" style="border-radius: 39px">Contact Us</a>
                                         </p>
                                     </div>
@@ -202,12 +181,10 @@
                             <div class="row">
                                 <div class="col-md-6 col-sm-12 col-md-offset-3 slider-text">
                                     <div class="slider-text-inner text-center">
-                                        <h2>Come &amp; enjoy the unforgetable nights</h2>
-                                        <h1>In the heart of
-                                            <br>Brady Hotel & Apartment</h1>
+                                        <h2>Come &amp; enjoy <br>the unforgetable nights</h2>
+                                        <h1>In Braddy Hotels & Apartments</h1>
                                         <p>
-                                            <a class="btn btn-primary btn-learn" style="border-radius: 39px" href="rooms.html">
-                                                </i> View rooms</a>
+                                            <a class="btn btn-primary btn-learn" style="border-radius: 39px" href="rooms.html">View rooms</a>
                                             <a class="btn btn-primary btn-demo" style="border-radius: 39px">Contact Us</a>
                                         </p>
                                     </div>
@@ -238,7 +215,8 @@
                             </span>
                             <h3 style="color: white">Relax</h3>
                             <p style="color: white">We put high sense of responsibility for serving our guests. We want to help your vacation become
-                                perfect by beautiful rooms with clean equipments, friendly and energetic staffs. Hope you enjoy!!!</p>
+                                perfect by beautiful rooms with clean equipments, friendly and energetic staffs. Hope you
+                                enjoy!!!</p>
                         </div>
                     </div>
                     <div class="col-md-3 animate-box text-center">
@@ -247,7 +225,8 @@
                                 <i class="flaticon-car"></i>
                             </span>
                             <h3 style="color: white">Transfer Services</h3>
-                            <p style="color: white">GRAB - it's available in Vung Tau for international people who are familiar with. <br> However, there are some other taxi's brands such as: Vinasun, Mailinh, Phuongtrang, ...</p>
+                            <p style="color: white">GRAB - it's available in Vung Tau for international people who are familiar with.
+                                <br> However, there are some other taxi's brands such as: Vinasun, Mailinh, Phuongtrang, ...</p>
                         </div>
                     </div>
                     <div class="col-md-3 animate-box text-center">
@@ -481,71 +460,6 @@
             </div>
         </div>
 
-        <div id="colorlib-blog" style="background: linear-gradient(#ff0084, #833ab4)">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 col-md-offset-3 text-center colorlib-heading animate-box">
-                        <span>
-                            <i class="icon-star-full"></i>
-                            <i class="icon-star-full"></i>
-                            <i class="icon-star-full"></i>
-                            <i class="icon-star-full"></i>
-                            <i class="icon-star-full"></i>
-                        </span>
-                        <h2 style="color: white">Recent Blog</h2>
-                        <p style="color: white">Share your interesting stories with us. Or we can make it together.</p>
-                    </div>
-                </div>
-                <div class="blog-flex">
-                    <div class="video colorlib-video" style="background-image: url(images/blog-4.jpg);">
-                        <a href="https://www.youtube.com/watch?v=ilw-qmqZ5zY" class="popup-vimeo">
-                            <i class="icon-video"></i>
-                        </a>
-                        <div class="overlay"></div>
-                    </div>
-                    <div class="blog-entry">
-                        <div class="row">
-                            <div class="col-md-12 animate-box">
-                                <a href="blog.html" class="blog-post">
-                                    <span class="img" style="background-image: url(images/blog-1.jpg);"></span>
-                                    <div class="desc">
-                                        <span class="date">January 14, 2018</span>
-                                        <h3>A Definitive Guide to the Best Dining</h3>
-                                        <span class="cat">Activities</span>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="col-md-12 animate-box">
-                                <a href="blog.html" class="blog-post">
-                                    <span class="img" style="background-image: url(images/blog-2.jpg);"></span>
-                                    <div class="desc">
-                                        <span class="date">January 14, 2018</span>
-                                        <h3>How These 5 People Found The Path to Their Dream Trip</h3>
-                                        <span class="cat">Activities</span>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="col-md-12 animate-box">
-                                <a href="blog.html" class="blog-post">
-                                    <span class="img" style="background-image: url(images/blog-3.jpg);"></span>
-                                    <div class="desc">
-                                        <span class="date">January 14, 2018</span>
-                                        <h3>Our Secret Island Boat Tour Is just for You</h3>
-                                        <span class="cat">Activities</span>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="col-md-12 animate-box text-right">
-                                <a href="#">View all blog post
-                                    <i class="icon-arrow-right3"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
         <div id="colorlib-testimony" class="colorlib-light-grey" style="background: #833ab4">
             <div class="container">
                 <div class="row">
@@ -623,7 +537,7 @@
                     </div>
 
                     <div class="col-md-3 colorlib-widget">
-                        <h4>Brady Hotels & Apartments</h4>
+                        <h4>Braddy Hotels & Apartments</h4>
                         <p>Enjoy your vacation by chosing right hotel where serve you nice.</p>
                         <p>
                             <ul class="colorlib-social-icons">
@@ -665,10 +579,10 @@
                                 <a href="tel://0868892709"> +86 889 2709</a>
                             </li>
                             <li>
-                                <a href="mailto:Bradyhotel@gmail.com"> Bradyhotel@gmail.com</a>
+                                <a href="mailto:Braddyhotel@gmail.com"> Braddyhotel@gmail.com</a>
                             </li>
                             <li>
-                                <a href="http://Bradyhotel.com"> Bradyhotel.com</a>
+                                <a href="http://Braddyhotel.com"> Braddyhotel.com</a>
                             </li>
                         </ul>
                     </div>
