--- a/view/blog.html
+++ b/view/blog.html
@@ -68,7 +68,7 @@
 					<div class="row">
 						<div class="col-xs-6">
 							<p class="site" style="color: white">
-								Địa chỉ:&nbspSố&nbspI-21,&nbspđường&nbspBầu&nbspSen&nbsp2,&nbspphường&nbsp2,&nbspVũng&nbspTàu
+								I-21, đường Bầu Sen&nbsp2, phường&nbsp2,&nbspVũng&nbspTàu
 							</p>
 						</div>
 						<div class="col-xs-6 text-right">
