--- a/view/contact.html
+++ b/view/contact.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Brady Hotels & Apartments</title>
+	<title>Braddy Hotels & Apartments</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -68,7 +68,7 @@
 					<div class="row">
 						<div class="col-xs-6">
 							<p class="site" style="color: white">
-								Địa chỉ:&nbspSố&nbspI-21,&nbspđường&nbspBầu&nbspSen&nbsp2,&nbspphường&nbsp2,&nbspVũng&nbspTàu
+								I-21, đường Bầu Sen&nbsp2, phường&nbsp2,&nbspVũng&nbspTàu
 							</p>
 						</div>
 						<div class="col-xs-6 text-right">
@@ -104,7 +104,7 @@
 					<div class="row">
 						<div class="col-xs-3">
 							<div id="colorlib">
-								<a href="index.html" style="color: white; font-size: 20px">Brady&nbspHotel&nbsp&&nbspApartment</a>
+								<a href="index.html" style="color: white; font-size: 20px">Braddy&nbspHotel&nbsp&&nbspApartment</a>
 							</div>
 						</div>
 						<div class="col-xs-9 text-right menu-1">
@@ -146,7 +146,14 @@
 				</ul>
 			</div>
 		</div>
-		<div id="map" class="colorlib-map"></div>
+		<div id="map" class="colorlib-map">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!
+    1d3723.8977453149246!2d105.83245751424809!3d21.036777085994046!
+    2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!
+    1s0x3135aba15ec15d17%3A0x620e85c2cfe14d4c!2zTMSDbmcgSOG7kyBDaMOtIE1pbmg!
+    5e0!3m2!1svi!2sus!4v1501056274257" width="600" height="450"
+    frameborder="0" style="border:0" allowfullscreen></iframe>
+		</div>
 
 		<footer id="colorlib-footer" role="contentinfo">
 			<div class="container">
@@ -166,7 +173,7 @@
 					</div>
 
 					<div class="col-md-3 colorlib-widget">
-						<h4>Brady Hotels & Apartments</h4>
+						<h4>Braddy Hotels & Apartments</h4>
 						<p>Enjoy your vacation by chosing right hotel where serve you nice.</p>
 						<p>
 							<ul class="colorlib-social-icons">
@@ -208,10 +215,10 @@
 								<a href="tel://0868892709"> +86 889 2709</a>
 							</li>
 							<li>
-								<a href="mailto:Bradyhotel@gmail.com"> Bradyhotel@gmail.com</a>
+								<a href="mailto:Braddyhotel@gmail.com"> Braddyhotel@gmail.com</a>
 							</li>
 							<li>
-								<a href="http://Bradyhotel.com"> Bradyhotel.com</a>
+								<a href="http://Braddyhotel.com"> Braddyhotel.com</a>
 							</li>
 						</ul>
 					</div>
@@ -253,7 +260,7 @@
 	<!-- Date Picker -->
 	<script src="js/bootstrap-datepicker.js"></script>
 	<!-- Google Map -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
+	<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script> -->
 	<script src="js/google_map.js"></script>
 	<!-- Main -->
 	<script src="js/main.js"></script>
