fix some stuffs

--- a/view/contact.html
+++ b/view/contact.html
@@ -140,7 +140,7 @@
 		</nav>
 		<div class="container-fluid" style="background-color: #302939; padding-top: 15px">
 			<div style="text-align: center">
-				<h4 style="color: #fcb045">Show my address by Vietnamese to Taxi-er or Grab-er if they do not understand your language</h4>
+				<h4 style="color: #fcb045">Show my address by Vietnamese to Taxi or Grab if they do not understand your language</h4>
 				<ul class="colorlib-footer-links" style="color: white">
 					<li>Địa chỉ: (Khu Á Châu) Số I-21, đường Bầu Sen 2, phường 2, thành phố Vũng Tàu</li>
 				</ul>
