--- a/view/index.html
+++ b/view/index.html
@@ -196,6 +196,70 @@
             </div>
         </aside>
 
+        <div id="colorlib-reservation">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12 search-wrap">
+						<form method="post" class="colorlib-form">
+							<div class="row">
+								<div class="col-md-3">
+									<div class="form-group">
+										<label for="date">Check-in:</label>
+										<div class="form-field">
+											<i class="icon icon-calendar2"></i>
+											<input type="text" id="date" class="form-control date" placeholder="Check-in date">
+										</div>
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="form-group">
+										<label for="date">Check-out:</label>
+										<div class="form-field">
+											<i class="icon icon-calendar2"></i>
+											<input type="text" id="date" class="form-control date" placeholder="Check-out date">
+										</div>
+									</div>
+								</div>
+								<div class="col-md-2">
+									<div class="form-group">
+										<label for="adults">Adults</label>
+										<div class="form-field">
+											<i class="icon icon-arrow-down3"></i>
+											<select name="people" id="people" class="form-control" style="background-color: #302939">
+												<option value="#">1</option>
+												<option value="#">2</option>
+												<option value="#">3</option>
+												<option value="#">4</option>
+												<option value="#">5+</option>
+											</select>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-2">
+									<div class="form-group">
+										<label for="children">Children</label>
+										<div class="form-field">
+											<i class="icon icon-arrow-down3"></i>
+											<select name="people" id="people" class="form-control" style="background-color: #302939">
+												<option value="#">1</option>
+												<option value="#">2</option>
+												<option value="#">3</option>
+												<option value="#">4</option>
+												<option value="#">5+</option>
+											</select>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-2">
+									<input type="submit" name="submit" id="submit" value="Search" class="btn btn-primary btn-block">
+								</div>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+
         <div id="colorlib-services" style="background: linear-gradient(#833ab4, #ff0084)">
             <div class="container">
                 <div class="row">
@@ -254,8 +318,8 @@
                             <i class="icon-star-full"></i>
                             <i class="icon-star-full"></i>
                         </span>
-                        <h2 style="color: white">Rooms &amp; Suites</h2>
-                        <p style="color: white">We love to tell our successful far far away, position in Á Châu zone.</p>
+                        <h2 style="color: white">Hotels &amp; Apartments</h2>
+                        <p style="color: white">Braddy Hotels & Apartments locates in Á Châu area where there are many foreigners from different countries choosing to stay and relax.</p>
                     </div>
                 </div>
                 <div class="row">
@@ -276,20 +340,20 @@
                                     </h3>
                                     <p class="price">
                                         <span class="currency">$</span>
-                                        <span class="price-room">99</span>
+                                        <span class="price-room">30</span>
                                         <span class="per">/ per night</span>
                                     </p>
                                     <ul>
                                         <li>
-                                            <i class="icon-check"></i> Only 10 rooms are available</li>
+                                            <i class="icon-check"></i> Only 6 rooms are available</li>
                                         <li>
                                             <i class="icon-check"></i> Breakfast included</li>
                                         <li>
                                             <i class="icon-check"></i> Price does not include VAT &amp; services fee</li>
                                     </ul>
-                                    <!-- <p>
+                                    <p>
                                         <a class="btn btn-primary btn-book">Book now!</a>
-                                    </p> -->
+                                    </p>
                                 </div>
                             </div>
                             <div class="item">
@@ -307,7 +371,7 @@
                                     </h3>
                                     <p class="price">
                                         <span class="currency">$</span>
-                                        <span class="price-room">199</span>
+                                        <span class="price-room">20</span>
                                         <span class="per">/ per night</span>
                                     </p>
                                     <ul>
@@ -318,9 +382,9 @@
                                         <li>
                                             <i class="icon-check"></i> Price does not include VAT &amp; services fee</li>
                                     </ul>
-                                    <!-- <p>
+                                    <p>
                                         <a class="btn btn-primary btn-book">Book now!</a>
-                                    </p> -->
+                                    </p>
                                 </div>
                             </div>
                             <div class="item">
@@ -338,7 +402,7 @@
                                     </h3>
                                     <p class="price">
                                         <span class="currency">$</span>
-                                        <span class="price-room">249</span>
+                                        <span class="price-room">30</span>
                                         <span class="per">/ per night</span>
                                     </p>
                                     <ul>
@@ -349,42 +413,12 @@
                                         <li>
                                             <i class="icon-check"></i> 1 free bed available on request</li>
                                     </ul>
-                                    <!-- <p>
+                                    <p>
                                         <a class="btn btn-primary btn-book">Book now!</a>
-                                    </p> -->
-                                </div>
-                            </div>
-                            <div class="item">
-                                <a href="images/room-4.jpg" class="room image-popup-link" style="background-image: url(images/room-4.jpg);"></a>
-                                <div class="desc text-center">
-                                    <span class="rate-star">
-                                        <i class="icon-star-full full"></i>
-                                        <i class="icon-star-full full"></i>
-                                        <i class="icon-star-full full"></i>
-                                        <i class="icon-star-full full"></i>
-                                        <i class="icon-star-full"></i>
-                                    </span>
-                                    <h3>
-                                        <a href="rooms-suites.html">Classic Double Room</a>
-                                    </h3>
-                                    <p class="price">
-                                        <span class="currency">$</span>
-                                        <span class="price-room">150</span>
-                                        <span class="per">/ per night</span>
                                     </p>
-                                    <ul>
-                                        <li>
-                                            <i class="icon-check"></i> Only 10 rooms are available</li>
-                                        <li>
-                                            <i class="icon-check"></i> Breakfast included</li>
-                                        <li>
-                                            <i class="icon-check"></i> Price does not include VAT &amp; services fee</li>
-                                    </ul>
-                                    <!-- <p>
-                                        <a class="btn btn-primary btn-book">Book now!</a>
-                                    </p> -->
                                 </div>
                             </div>
+                            
                             <div class="item">
                                 <a href="images/room-5.jpg" class="room image-popup-link" style="background-image: url(images/room-5.jpg);"></a>
                                 <div class="desc text-center">
@@ -400,7 +434,7 @@
                                     </h3>
                                     <p class="price">
                                         <span class="currency">$</span>
-                                        <span class="price-room">200</span>
+                                        <span class="price-room">30</span>
                                         <span class="per">/ per night</span>
                                     </p>
                                     <ul>
@@ -411,9 +445,9 @@
                                         <li>
                                             <i class="icon-check"></i> Price does not include VAT &amp; services fee</li>
                                     </ul>
-                                    <!-- <p>
+                                    <p>
                                         <a class="btn btn-primary btn-book">Book now!</a>
-                                    </p> -->
+                                    </p>
                                 </div>
                             </div>
                             <div class="item">
@@ -433,7 +467,7 @@
                                         <span class="currency">
                                             <small>$</small>
                                         </span>
-                                        <span class="price-room">299</span>
+                                        <span class="price-room">30</span>
                                         <span class="per">/ per night</span>
                                     </p>
                                     <ul>
@@ -444,9 +478,9 @@
                                         <li>
                                             <i class="icon-check"></i> Price does not include VAT &amp; services fee</li>
                                     </ul>
-                                    <!-- <p>
+                                    <p>
                                         <a class="btn btn-primary btn-book">Book now!</a>
-                                    </p> -->
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -471,9 +505,8 @@
                             <i class="icon-star-full"></i>
                             <i class="icon-star-full"></i>
                         </span>
-                        <h2 style="color: white">Our Satisfied Guests says</h2>
-                        <p style="color: white">We love to tell our successful far far away, behind the word mountains, far from the countries Vokalia
-                            and Consonantia, there live the blind texts.</p>
+                        <h2 style="color: white">Review by our guests</h2>
+                        <p style="color: white">We always welcome people from all over the world to come and enjoy our place as well as our hometown. Let's Braddy hotels please and make your choice perfection.</p>
                     </div>
                 </div>
                 <div class="row">
@@ -538,7 +571,7 @@
 
                     <div class="col-md-3 colorlib-widget">
                         <h4>Braddy Hotels & Apartments</h4>
-                        <p>Enjoy your vacation by chosing right hotel where serve you nice.</p>
+                        <p>Enjoy your vacation by chosing right hotel where serves you nice.</p>
                         <p>
                             <ul class="colorlib-social-icons">
                                 <li>
@@ -571,7 +604,7 @@
                             <li>
                                 <span>
                                     <i class="icon-flag3"></i>
-                                </span> Address: I-21, Bầu Sen 2 Street, Ward 2, Vung Tau city</li>
+                                </span> I-21, Bầu Sen 2 Street, Ward 2, Vung Tau city</li>
                             <li>
                                 <span>
                                     <i class="icon-phone3"></i>
