--- a/view/rooms.html
+++ b/view/rooms.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Brady Hotels & Apartments</title>
+	<title>Braddy Hotels & Apartments</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -104,7 +104,7 @@
 					<div class="row">
 						<div class="col-xs-3">
 							<div id="colorlib">
-								<a href="index.html" style="color: white; font-size: 20px">Brady&nbspHotel&nbsp&&nbspApartment</a>
+								<a href="index.html" style="color: white; font-size: 20px">Braddy&nbspHotel&nbsp&&nbspApartment</a>
 							</div>
 						</div>
 						<div class="col-xs-9 text-right menu-1">
@@ -157,7 +157,7 @@
 							</h3>
 							<p class="price">
 								<span class="currency">$</span>
-								<span class="price-room">149</span>
+								<span class="price-room">20</span>
 								<span class="per">/ per night</span>
 							</p>
 							<ul>
@@ -188,7 +188,7 @@
 							</h3>
 							<p class="price">
 								<span class="currency">$</span>
-								<span class="price-room">199</span>
+								<span class="price-room">30</span>
 								<span class="per">/ per night</span>
 							</p>
 							<ul>
@@ -219,7 +219,7 @@
 							</h3>
 							<p class="price">
 								<span class="currency">$</span>
-								<span class="price-room">249</span>
+								<span class="price-room">30</span>
 								<span class="per">/ per night</span>
 							</p>
 							<ul>
@@ -250,7 +250,7 @@
 							</h3>
 							<p class="price">
 								<span class="currency">$</span>
-								<span class="price-room">179</span>
+								<span class="price-room">30</span>
 								<span class="per">/ per night</span>
 							</p>
 							<ul>
@@ -281,7 +281,7 @@
 							</h3>
 							<p class="price">
 								<span class="currency">$</span>
-								<span class="price-room">270</span>
+								<span class="price-room">30</span>
 								<span class="per">/ per night</span>
 							</p>
 							<ul>
@@ -314,7 +314,7 @@
 								<span class="currency">
 									<small>$</small>
 								</span>
-								<span class="price-room">270</span>
+								<span class="price-room">30</span>
 								<span class="per">/ per night</span>
 							</p>
 							<ul>
@@ -353,7 +353,7 @@
 				</div>
 
 				<div class="col-md-3 colorlib-widget">
-					<h4>Brady Hotels & Apartments</h4>
+					<h4>Braddy Hotels & Apartments</h4>
 					<p>Enjoy your vacation by chosing right hotel where serve you nice.</p>
 					<p>
 						<ul class="colorlib-social-icons">
@@ -395,10 +395,10 @@
 							<a href="tel://0868892709"> +86 889 2709</a>
 						</li>
 						<li>
-							<a href="mailto:Bradyhotel@gmail.com"> Bradyhotel@gmail.com</a>
+							<a href="mailto:Braddyhotel@gmail.com"> Braddyhotel@gmail.com</a>
 						</li>
 						<li>
-							<a href="http://Bradyhotel.com"> Bradyhotel.com</a>
+							<a href="http://Braddyhotel.com"> Braddyhotel.com</a>
 						</li>
 					</ul>
 				</div>
