--- a/view/about.html
+++ b/view/about.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Brady Hotels & Apartments</title>
+	<title>Braddy Hotels & Apartments</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -104,7 +104,7 @@
 					<div class="row">
 						<div class="col-xs-3">
 							<div id="colorlib">
-								<a href="index.html" style="color: white; font-size: 20px">Brady&nbspHotel&nbsp&&nbspApartment</a>
+								<a href="index.html" style="color: white; font-size: 20px">Braddy&nbspHotel&nbsp&&nbspApartment</a>
 							</div>
 						</div>
 						<div class="col-xs-9 text-right menu-1">
@@ -144,9 +144,8 @@
 				<div class="row">
 					<div class="col-md-6">
 						<div class="about animate-box">
-							<h2>Welcome to Brady Hotels & Apartments</h2>
-							<p>Brady hotel is a beautiful and modern hotel which is attract lots of attention of visitors and guests from many countries.</p>
-							<p></p>
+							<h2>Welcome to Braddy Hotels & Apartments</h2>
+							<p>Braddy Hotels & Apartments lauch to serve the demands of foreigners and travelers who want to stay in clean and beautiful rooms. Understanding of that, Brad Duy open this place to help visitors and guests enjoy their vacations/holidays entirely. You are always invited and welcomed.</p>
 						</div>
 					</div>
 					<div class="col-md-6">
@@ -174,8 +173,8 @@
 					</div>
 
 					<div class="col-md-3 colorlib-widget">
-						<h4>Brady Hotels & Apartments</h4>
-						<p>Enjoy your vacation by chosing right hotel where serve you nice.</p>
+						<h4>Braddy Hotels & Apartments</h4>
+						<p>Enjoy your vacation by chosing right hotels where serve you nice.</p>
 						<p>
 							<ul class="colorlib-social-icons">
 								<li>
@@ -216,10 +215,10 @@
 								<a href="tel://0868892709"> +86 889 2709</a>
 							</li>
 							<li>
-								<a href="mailto:Bradyhotel@gmail.com"> Bradyhotel@gmail.com</a>
+								<a href="mailto:Braddyhotel@gmail.com"> Braddyhotel@gmail.com</a>
 							</li>
 							<li>
-								<a href="http://Bradyhotel.com"> Bradyhotel.com</a>
+								<a href="http://Braddyhotel.com"> Braddyhotel.com</a>
 							</li>
 						</ul>
 					</div>
@@ -228,7 +227,7 @@
 					<div class="col-md-12 text-center">
 						<p>
 							<small class="block">
-								Copyright &copy; 2018 | All rights reserved | This site is made by Brad Duy</a>
+                                Copyright &copy; 2018 | All rights reserved<br>This site is made by Brad Duy</a>
 							</small>
 						</p>
 					</div>
