--- a/view/contact.html
+++ b/view/contact.html
@@ -227,7 +227,7 @@
 					<div class="col-md-12 text-center">
 						<p>
 							<small class="block">
-								Copyright &copy; 2018 | All rights reserved | This site is made by Brad Duy</a>
+                                Copyright &copy; 2018 | All rights reserved<br>This site is made by Brad Duy</a>
 							</small>
 						</p>
 					</div>
