--- a/view/blog.html
+++ b/view/blog.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Brady Hotels & Apartments</title>
+	<title>Braddy Hotels & Apartments</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -104,7 +104,7 @@
 					<div class="row">
 						<div class="col-xs-3">
 							<div id="colorlib">
-								<a href="index.html" style="color: white; font-size: 20px">Brady&nbspHotel&nbsp&&nbspApartment</a>
+								<a href="index.html" style="color: white; font-size: 20px">Braddy&nbspHotel&nbsp&&nbspApartment</a>
 							</div>
 						</div>
 						<div class="col-xs-9 text-right menu-1">
@@ -352,7 +352,7 @@
 					</div>
 
 					<div class="col-md-3 colorlib-widget">
-						<h4>Brady Hotels & Apartments</h4>
+						<h4>Braddy Hotels & Apartments</h4>
 						<p>Enjoy your vacation by chosing right hotel where serve you nice.</p>
 						<p>
 							<ul class="colorlib-social-icons">
@@ -394,10 +394,10 @@
 								<a href="tel://0868892709"> +86 889 2709</a>
 							</li>
 							<li>
-								<a href="mailto:Bradyhotel@gmail.com"> Bradyhotel@gmail.com</a>
+								<a href="mailto:Braddyhotel@gmail.com"> Braddyhotel@gmail.com</a>
 							</li>
 							<li>
-								<a href="http://Bradyhotel.com"> Bradyhotel.com</a>
+								<a href="http://Braddyhotel.com"> Braddyhotel.com</a>
 							</li>
 						</ul>
 					</div>
@@ -406,7 +406,7 @@
 					<div class="col-md-12 text-center">
 						<p>
 							<small class="block">
-								Copyright &copy; 2018 | All rights reserved | This site is made by Brad Duy</a>
+                                Copyright &copy; 2018 | All rights reserved<br>This site is made by Brad Duy</a>
 							</small>
 						</p>
 					</div>
